tests/idris2/error/perror018/ParseRecord.idr
record R : Type where
  constructor MkR
  one : Type
  _ : Type
